--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">arkanoid</string>
+    <string name="app_name" translatable="false">arkanoid</string>
+    <string name="menu_principale">Menu Principale</string>
+    <string name="gioca">Gioca</string>
+    <string name="impostazioni">Impostazioni</string>
 </resources>
