--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,13 @@
 <resources>
     <string name="app_name" translatable="false">arkanoid</string>
     <string name="menu_principale">Menu Principale</string>
-    <string name="gioca">Gioca</string>
+    <string name="arcade">Arcade</string>
     <string name="impostazioni">Impostazioni</string>
+    <string name="editor_livelli">Editor Livelli</string>
+    <string name="classifica">Classifica</string>
+    <string name="imposta_lingua">imposta lingua:</string>
+    <string name="ita" translatable="false">ITA</string>
+    <string name="eng" translatable="false">ENG</string>
+    <string name="esp" translatable="false">ESP</string>
+    <string name="salva">Salva</string>
 </resources>
