-creato Splash screen -immersive mode per menu

--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -7,4 +7,5 @@
     <string name="classifica">" Clasificación"</string>
     <string name="imposta_lingua">" Elegir lenguaje"</string>
     <string name="salva">Salvar</string>
+    <string name="developed">Desarrollado por</string>
 </resources>
