--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name" translatable="false">arkanoid</string>
+    <string name="app_name">arkanoid</string>
     <string name="menu_principale">Menu Principale</string>
     <string name="arcade">Arcade</string>
     <string name="impostazioni">Impostazioni</string>
@@ -10,4 +10,5 @@
     <string name="eng" translatable="false">ENG</string>
     <string name="esp" translatable="false">ESP</string>
     <string name="salva">Salva</string>
+    <string name="developed">Sviluppato da</string>
 </resources>
