--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -7,4 +7,5 @@
     <string name="classifica">Leaderboard</string>
     <string name="imposta_lingua">Set language</string>
     <string name="salva">Save</string>
+    <string name="developed">Developed by</string>
 </resources>
