--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="imposta_sistema_di_controllo">Imposta sistema di controllo</string>
     <string name="scorri_con_il_dito">scorri con il dito</string>
     <string name="muovi_il_telefono">muovi il telefono</string>
+    <string name="imposta_esistenza_audio">imposta audio</string>
+    <string name="audio_on">attivato</string>
+    <string name="audio_off">disattivato</string>
+
 </resources>
