--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -14,4 +14,7 @@
     <string name="imposta_esistenza_audio">modificar audio</string>
     <string name="audio_off">deactivado</string>
     <string name="audio_on">activado</string>
+    <string name="tab_text_1">Local</string>
+    <string name="tab_text_2">Global</string>
+    <string name="title_activity_leader_board">Clasificación</string>
 </resources>
