- Inserito login con google account.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,9 @@
     <string name="title_activity_leader_board">Classifica</string>
     <string name="tab_text_1">Locale</string>
     <string name="tab_text_2">Globale</string>
+    <string name="sign_out_button" translatable="false">Log Out</string>
+    <string name="signin_other_error">Errore nel login</string>
+    <string name="signed_out">Log out effettuato</string>
+    <string name="signed_in_fmt">Login completato</string>
 
 </resources>
