- Inserita player card con logout(da sistemare).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="signin_other_error">Errore nel login</string>
     <string name="signed_out">Log out effettuato</string>
     <string name="signed_in_fmt">Login completato</string>
+    <string name="guest_button">Gioca offline</string>
 
 </resources>
