--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,10 @@
     <string name="tab_text_1">Locale</string>
     <string name="tab_text_2">Globale</string>
     <string name="sign_out_button" translatable="false">Log Out</string>
+    <string name="create_room_button">crea</string>
+    <string name="join_room_button">accedi</string>
+    <string name="create_or_join_room">crea o accedi alla stanza</string>
+    <string name="insert_room">inserisci codice stanza </string>
     <string name="signin_other_error">Errore nel login</string>
     <string name="need_login">Devi essere loggato per poter accedere!</string>
     <string name="signed_out">Log out effettuato</string>
