- accesso alla room migliorato

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="seleziona_tipologia_partita">Seleziona tipologia partita</string>
     <string name="matchmaking">matchmaking</string>
     <string name="privata">privata</string>
+    <string name="cancel_button">annulla</string>
     <string name="firebase_root" translatable="false">https://arkanoid-d46b0-default-rtdb.europe-west1.firebasedatabase.app</string>
 
 
