--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -24,5 +24,6 @@
     <string name="signed_out">Log out done</string>
     <string name="need_login">"You must be logged in to access! "</string>
     <string name="signin_other_error">Error login</string>
+    <string name="cancel_button">cancel</string>
 
 </resources>
