--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,7 +55,7 @@
     <string name="error_exist_room">esiste una room con questo codice</string>
     <string name="error_room_already_taken">stanza di gioco occupata</string>
     <string name="error_room_already_created">stanza ancora non creata</string>
-    <string name="error_access_room_with_same_profile">Risulti loggato in un altro dispositivo</string>
+    <string name="error_access_room_with_same_profile">impossibile accedere alla stanza</string>
 
 
 </resources>
