--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -17,4 +17,30 @@
     <string name="tab_text_1">Local</string>
     <string name="tab_text_2">Global</string>
     <string name="title_activity_leader_board">Clasificación</string>
+    <string name="matchmaking">matchmaking</string>
+    <string name="multiplayer">Multiplayer</string>
+    <string name="delete_level">eliminación de nivel en curso</string>
+    <string name="wait_access_room">esperando a otro jugador</string>
+    <string name="wait_loading_game_room">Espero la carga del juego</string>
+    <string name="error_exist_room">hay una habitación con este código</string>
+    <string name="error_room_already_taken">sala de juegos ocupada</string>
+    <string name="error_room_already_created">habitación aún no creada</string>
+    <string name="error_access_room_with_same_profile">incapaz de acceder a la habitación</string>
+    <string name="seleziona_tipologia_partita">Seleccione el tipo de coincidencia</string>
+    <string name="privata">privado</string>
+    <string name="cancel_button">cancelar</string>
+    <string name="create_room_button">crear</string>
+    <string name="join_room_button">entrar</string>
+    <string name="create_or_join_room">crear o entrar en la habitación</string>
+    <string name="insert_room">ingrese el código de la habitación</string>
+    <string name="signin_other_error">Error de inicio de sesión</string>
+    <string name="need_login">¡Debes iniciar sesión para acceder!</string>
+    <string name="signed_out">Cerrar sesión correctamente</string>
+    <string name="signed_in_fmt">Inicio de sesión completado</string>
+    <string name="guest_button">Jugar offline</string>
+    <string name="inserisci_un_nickname">Entrar a nickname</string>
+    <string name="avanti">Adelante</string>
+    <string name="save_level">ahorro en progreso</string>
+    <string name="load_levels_created">cargando niveles creados</string>
+    <string name="load_level_selected">cargando el nivel seleccionado</string>
 </resources>
