--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -46,5 +46,8 @@
     <string name="save_level_dialog">Save Level</string>
     <string name="insert_name_level_hint">insert name level</string>
     <string name="save_label">save</string>
+    <string name="select_level_created">edit or delete layers</string>
+    <string name="select_level_to_play">select a level to play</string>
+    <string name="author_level">author:</string>
 
 </resources>
