--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -49,4 +49,5 @@
     <string name="select_level_created">editar o eliminar capas</string>
     <string name="select_level_to_play">selecciona un nivel para jugar</string>
     <string name="author_level">"autor: "</string>
+    <string name="load_level_to_search">cargando niveles compartidos</string>
 </resources>
